--- a/index.html
+++ b/index.html
@@ -17,24 +17,30 @@ a{
 text-decoration:none;
 color:#c9c9c9;
 font-size:7pt;
+cursor:default;
 }
 </style>
 <body>
 
-<table style="HEIGHT:100%;WIDTH:100%;" border=1> <tr align="center" bottom="middle"><td> <table border=1> 
+<table style="HEIGHT:100%;WIDTH:100%;" border=0> <tr align="center" bottom="middle"><td> <table border=0> 
 <tr ><td colspan="3">
 <center><img src="img/profile2.gif" alt="jak" width="35%" height="35%">
 <p>Pablo Usuga</p>
 </center>
 </td></tr>
-<tr><td>
+<tr><td height="50"></td></tr>
+<tr>
+<td width="33%">
+
+<center><a href="https://www.instagram.com/pb.su/">I</a></center>
+</td>
+<td width="33%">
+
 <center><a href="https://www.github.com/psga">G</a></center>
 </td>
-<td>
+<td width="33%">
+
 <center><a href="https://steamcommunity.com/id/zyrba">S</a></center>
-</td>
-<td>
-<center><a href="https://www.instagram.com/p.su0/">I</a></center>
 </td>
 </tr></td></tr></table>
 </body>
