--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <HTML>
 <head> 
 <link rel="shortcut icon" href="img/pia.png" type="image/png">
-<link rel="icon" href="img/favicona.ico" type="image/x-icon">
+<link rel="icon" href="img/pia.png" type="image/png">
+<!--<link rel="icon" href="img/favicona.ico" type="image/x-icon"> -->
+<!--
+   (                                
+   )\ )                             
+  (()/(      (       (  (  (     )  
+   /(_))     )\ (   ))\ )\))( ( /(  
+  (_))    _ ((_))\ /((_|(_))\ )(_)) 
+  | _ \  | | | ((_|_))( (()(_|(_)_  
+  |  _/  | |_| (_-< || / _` |/ _` | 
+  |_|     \___//__/\_,_\__, |\__,_| 
+                       |___/        
+-->
 <title>Pusuga</title>
 </head>
 <style> 
