--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ cursor:default;
 
 <table style="HEIGHT:100%;WIDTH:100%;" border=0> <tr align="center" bottom="middle"><td> <table border=0> 
 <tr ><td colspan="3">
-<center><img src="img/profile2.gif" alt="jak" width="35%" height="35%">
+<center><img src="img/profile2.gif" alt="jak" width="300px" height="300px">
 <p>Pablo Usuga</p>
 </center>
 </td></tr>
