--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <style>
   body {
     background-color: black;
-    height: 95vh;
+    height: 97vh;
   }
 
   p {
@@ -45,8 +45,14 @@
     
     text-decoration: none;
     color: #c9c9c9;
-    font-size: 10pt;
-    cursor: help;
+    font-size: 7pt;
+    cursor: None;
+  }
+  a:hover {
+      color: black;
+  }
+  a {
+      transition: color 0.8s linear 0.2s;
   }
 </style>
 
@@ -59,14 +65,16 @@
           <tr>
             <td colspan="3">
               <a href="https://psga.github.io/k011">
-                <center><img src="img/profile2.gif" alt="jak" width="300px" height="300px">
+                <center>
+			<video src="img/profile2.webm" width="300px" height="300px" autoplay='true' loop='true'"></video>
+
               </a>
               <p>Pablo Usuga</p>
               </center>
             </td>
           </tr>
           <tr>
-            <td height="50"></td>
+            <td height="20"></td>
           </tr>
           <tr>
             <td width="33%">
