--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@
             <td colspan="3">
               <a href="https://psga.github.io/k011">
                 <center>
-			<video src="img/profile2.webm" width="300px" height="300px" autoplay='true' loop='true'"></video>
+			<video width="300px" height="300px" autoplay loop muted>
+				<img src="https://i.pinimg.com/564x/7c/32/31/7c32313848b48fb9a564cfa312999c84.jpg" alt="Girl in a jacket">
+
+				<source src="img/profile2.mp4" type="video/mp4" >
+				<source src="img/profile2.webm" type="video/webm" >
+			</video>
 
               </a>
               <p>Pablo Usuga</p>
