--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
     text-decoration: none;
     color: #c9c9c9;
     font-size: 7pt;
-    cursor: None;
   }
   a:hover {
       color: black;
@@ -62,6 +61,7 @@
     text-align:center;
 }
   table {
+  cursor:url("https://upload.wikimedia.org/wikipedia/commons/1/1a/1x1_placeholder.png"),auto;
   border-collapse: collapse;
   border:0
 }
