--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   }
 
   a {
-    
+    cursor:url("https://upload.wikimedia.org/wikipedia/commons/1/1a/1x1_placeholder.png"),auto;
     text-decoration: none;
     color: #c9c9c9;
     font-size: 7pt;
