page: complete dev pages

--- a/index.html
+++ b/index.html
@@ -74,25 +74,6 @@
       <td>
         <table >
           <tr>
-            <td colspan="3">
-              <a href="https://psga.github.io/k011">
-                <center>
-			<video width="300px" height="300px" autoplay loop muted>
-				<img src="https://i.pinimg.com/564x/7c/32/31/7c32313848b48fb9a564cfa312999c84.jpg" alt="Girl in a jacket">
-
-				<source src="img/profile2.mp4" type="video/mp4" >
-				<source src="img/profile2.webm" type="video/webm" >
-			</video>
-
-              </a>
-              <p>Pablo Usuga</p>
-              </center>
-            </td>
-          </tr>
-          <tr>
-            <td height="15"></td>
-          </tr>
-          <tr>
             <td height="40" width="33%">
 
               <a href="https://www.instagram.com/pb.su/">
@@ -110,6 +91,46 @@
 		 <div style="height:100%;width:100%">S</div></a>
             </td>
           </tr>
+	 <tr>
+            <td height="15"></td>
+          </tr>
+
+          <tr>
+            <td colspan="3">
+              <a href="https://psga.github.io/k011">
+                <center>
+			<video width="300px" height="300px" autoplay loop muted>
+				<img src="https://i.pinimg.com/564x/7c/32/31/7c32313848b48fb9a564cfa312999c84.jpg" alt="Girl in a jacket">
+
+				<source src="img/profile2.mp4" type="video/mp4" >
+				<source src="img/profile2.webm" type="video/webm" >
+			</video>
+              </a>
+              </center>
+            </td>
+          </tr>
+          <tr>
+            <td height="15"></td>
+          </tr>
+          <tr>
+            <td height="40" width="33%">
+
+              <a href="https://www.hackerrank.com/pablxusuga">
+		      <div style="height:100%;width:100%">H</div></a>
+
+            </td>
+            <td height="40" width="33%">
+
+              <a href="https://www.codewars.com/users/psga">
+		 <div style="height:100%; width:100%">C</div></a>
+            </td>
+            <td height="40" width="33%">
+
+              <a href="https://www.kaggle.com/pablousuga">
+		 <div style="height:100%;width:100%">K</div></a>
+            </td>
+          </tr>
+
       </td>
     </tr>
   </table>
