--- a/index.html
+++ b/index.html
@@ -6,17 +6,7 @@
   <link rel="icon" href="img/pia.png" type="image/png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--
-   (                                
-   )\ )                             
-  (()/(      (       (  (  (     )  
-   /(_))     )\ (   ))\ )\))( ( /(  
-  (_))    _ ((_))\ /((_|(_))\ )(_)) 
-  | _ \  | | | ((_|_))( (()(_|(_)_  
-  |  _/  | |_| (_-< || / _` |/ _` | 
-  |_|     \___//__/\_,_\__, |\__,_| 
-                       |___/        
--->
+ 
   <title>Pusuga</title>
   <!--
    (                                
@@ -115,8 +105,8 @@
           <tr>
             <td height="40" width="33%">
 
-              <a href="https://www.hackerrank.com/pablxusuga">
-		      <div style="height:100%;width:100%">H</div></a>
+              <a href="https://tryhackme.com/p/pusugag">
+		      <div style="height:100%;width:100%">T</div></a>
 
             </td>
             <td height="40" width="33%">
